All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/RMA_Shipment_Line__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>ServiceMax uses a common tab Parts Orders as a home for RMA and Shipment orders both. Parts Order Line lists parts returned or shipped.</description>
    <label>Parts Order Line</label>
    <nameField>
        <displayFormat>LN-{00000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parts Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>