All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Actual_Quantity2__c.field-meta.xml
<CustomField>
    <fullName>Actual_Quantity2__c</fullName>
    <description>Actual number of units shipped/received vs. expected quantity</description>
    <inlineHelpText>Actual number of units shipped/received vs. expected quantity</inlineHelpText>
    <label>Actual Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>