All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Actual_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Receipt_Date__c</fullName>
    <description>Date on which the product was actually received</description>
    <inlineHelpText>Date on which the product was actually received</inlineHelpText>
    <label>Actual Receipt Date</label>
    <type>Date</type>
</CustomField>