All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Canceled_By__c.field-meta.xml
<CustomField>
    <fullName>Canceled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that canceled this shipment line. This is set automatically when a user cancels the shipment line.</description>
    <inlineHelpText>User that canceled this shipment line. This is set automatically when a user cancels the shipment line.</inlineHelpText>
    <label>Canceled By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RMA_Shipment_Line_Canceled_By</relationshipName>
    <type>Lookup</type>
</CustomField>