All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Closed_By__c.field-meta.xml
<CustomField>
    <fullName>Closed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that closed this RMA/shipment order.</description>
    <inlineHelpText>User that closed this RMA/shipment order.</inlineHelpText>
    <label>Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RMA_Shipment_Line_Closed_By</relationshipName>
    <type>Lookup</type>
</CustomField>