All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Closed_On__c.field-meta.xml
<CustomField>
    <fullName>Closed_On__c</fullName>
    <description>Date/time when this RMA/Shipment line was closed.</description>
    <inlineHelpText>Date/time when this RMA/Shipment line was closed.</inlineHelpText>
    <label>Closed On</label>
    <type>DateTime</type>
</CustomField>