All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Delivered_By__c.field-meta.xml
<CustomField>
    <fullName>Delivered_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that delivered the product</description>
    <label>Delivered By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Parts_Order_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>