All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Delivered_On__c.field-meta.xml
<CustomField>
    <fullName>Delivered_On__c</fullName>
    <description>Date/time when the product was delivered</description>
    <label>Delivered On</label>
    <type>DateTime</type>
</CustomField>