All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Location</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Parts Order Lines (Delivery Location)</relationshipLabel>
    <relationshipName>Parts_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>