All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Disposition_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Instructions__c</fullName>
    <description>Any special handling notes for product disposition</description>
    <inlineHelpText>Any special handling notes for product disposition</inlineHelpText>
    <label>Disposition Instructions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>