All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Entitled_Exchange_Type__c.field-meta.xml
<CustomField>
    <fullName>Entitled_Exchange_Type__c</fullName>
    <label>Entitled Exchange Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advance Exchange</fullName>
            </value>
            <value>
                <fullName>Return Exchange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>