All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Entitlement_Status__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Status__c</fullName>
    <label>Entitlement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Entitled To Warranty</fullName>
            </value>
            <value>
                <fullName>Not Entitled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>