All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Expected_Condition__c.field-meta.xml
<CustomField>
    <fullName>Expected_Condition__c</fullName>
    <description>Condition of the product returned</description>
    <inlineHelpText>Condition of the product returned</inlineHelpText>
    <label>Expected Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Good/Working</fullName>
            </value>
            <value>
                <fullName>Defective</fullName>
            </value>
            <value>
                <fullName>Shipping Damage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>