All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Expected_Quantity2__c.field-meta.xml
<CustomField>
    <fullName>Expected_Quantity2__c</fullName>
    <description>Number of products returned. Usually 1 for serialized products</description>
    <inlineHelpText>Number of products returned. Usually 1 for serialized products</inlineHelpText>
    <label>Expected Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>