All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Expected_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Receipt_Date__c</fullName>
    <description>Date on which the product is expected to be received at the depot/factory/warehouse</description>
    <inlineHelpText>Date on which the product is expected to be received at the depot/factory/warehouse</inlineHelpText>
    <label>Expected Receipt Date</label>
    <type>Date</type>
</CustomField>