All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Fulfillment_Qty__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Qty__c</fullName>
    <label>Fulfillment Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>