All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Line_Status__c.field-meta.xml
<CustomField>
    <fullName>Line_Status__c</fullName>
    <description>Current status of the RMA/Shipment line.</description>
    <inlineHelpText>Current status of the RMA/Shipment line.</inlineHelpText>
    <label>Line Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Picked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>