All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Type__c</fullName>
    <description>Internal line type of the RMA/Shipment line. Not displayed.</description>
    <inlineHelpText>Internal line type of the RMA/Shipment line. Not displayed.</inlineHelpText>
    <label>Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound (RMA)</fullName>
            </value>
            <value>
                <fullName>Outbound (Shipment)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>