All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Master_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Master_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Order Line</label>
    <referenceTo>RMA_Shipment_Line__c</referenceTo>
    <relationshipLabel>Parts Order Lines</relationshipLabel>
    <relationshipName>Parts_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>