All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Packing_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Packing_Instructions__c</fullName>
    <description>Any special handling notes for shipping department</description>
    <inlineHelpText>Any special handling notes for shipping department</inlineHelpText>
    <label>Packing Instructions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>