All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Picked_Qty__c.field-meta.xml
<CustomField>
    <fullName>Picked_Qty__c</fullName>
    <description>Quantity picked for shipment</description>
    <label>Picked Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>