All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Posted_To_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Posted_To_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag Indicates if this RMA/Shipment line has been posted to inventory or not.</description>
    <inlineHelpText>Flag Indicates if this RMA/Shipment line has been posted to inventory or not.</inlineHelpText>
    <label>Posted To Inventory</label>
    <type>Checkbox</type>
</CustomField>