All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Received_By__c.field-meta.xml
<CustomField>
    <fullName>Received_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that received the product</description>
    <label>Received By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Parts_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>