All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Received_On__c.field-meta.xml
<CustomField>
    <fullName>Received_On__c</fullName>
    <description>Date/time when the product was received</description>
    <label>Received On</label>
    <type>DateTime</type>
</CustomField>