All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Route_Card__c.field-meta.xml
<CustomField>
    <fullName>Route_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Card</label>
    <referenceTo>Route_Card__c</referenceTo>
    <relationshipLabel>Parts Order Lines</relationshipLabel>
    <relationshipName>Route_Card</relationshipName>
    <type>Lookup</type>
</CustomField>