All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Route_Stop__c.field-meta.xml
<CustomField>
    <fullName>Route_Stop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Stop</label>
    <referenceTo>Route_Stop__c</referenceTo>
    <relationshipLabel>Parts Order Lines</relationshipLabel>
    <relationshipName>Parts_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>