All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Number__c</fullName>
    <description>Sales order number for this shipment if available.</description>
    <inlineHelpText>Sales order number for this shipment if available.</inlineHelpText>
    <label>Sales Order Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>