All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Serial_Number_List__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number_List__c</fullName>
    <description>List of serial numbers expected/received/shipped separated by a configurable delimiter</description>
    <label>Serial Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>