All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Service_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_Start_Date__c</fullName>
    <formula>Serial_Number__r.Service_Contract_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Contract Start Date</label>
    <type>Date</type>
</CustomField>