All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Service_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Service_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the service engineer associated with this RMA/shipment order. Is a lookup to an existing salesforce user record</description>
    <inlineHelpText>Name of the service engineer associated with this RMA/shipment order. Is a lookup to an existing salesforce user record</inlineHelpText>
    <label>Service Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RMA_Shipment_Line</relationshipName>
    <type>Lookup</type>
</CustomField>