All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Service_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ServiceMax service order parts request line for which this shipment line was created.</description>
    <inlineHelpText>The ServiceMax service order parts request line for which this shipment line was created.</inlineHelpText>
    <label>Work Details</label>
    <referenceTo>Service_Order_Line__c</referenceTo>
    <relationshipName>RMA_Shipment_Line</relationshipName>
    <type>Lookup</type>
</CustomField>