All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Ship_Location__c.field-meta.xml
<CustomField>
    <fullName>Ship_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The actual site/location where the product was shipped/received. Is a lookup to an existing site record</description>
    <inlineHelpText>The actual site/location where the product was shipped/received. Is a lookup to an existing site record</inlineHelpText>
    <label>Return/Ship Location</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipName>RMA_Shipment_Line</relationshipName>
    <type>Lookup</type>
</CustomField>