All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Shipped_On__c.field-meta.xml
<CustomField>
    <fullName>Shipped_On__c</fullName>
    <description>Date/time when the product was shipped</description>
    <label>Shipped On</label>
    <type>DateTime</type>
</CustomField>