All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Total_Line_Price2__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Price2__c</fullName>
    <description>Total Line Price</description>
    <formula>IF( ISPICKVAL( Line_Status__c ,&apos;Completed&apos;), (Actual_Quantity2__c * Line_Price2__c) - ( Discount_Percentage__c * (Actual_Quantity2__c * Line_Price2__c)), IF(ISPICKVAL( Line_Status__c ,&apos;Canceled&apos;), 0,(Expected_Quantity2__c * Line_Price2__c) - ( Discount_Percentage__c * (Expected_Quantity2__c * Line_Price2__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Line Price</inlineHelpText>
    <label>Total Line Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>