All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Transaction_Results__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Results__c</fullName>
    <description>Success or error message as a result of a transaction. This message is derived from executing a defined process in SFM API Configuration.</description>
    <inlineHelpText>Success or error message as a result of a transaction. This message is derived from executing a defined process in SFM API Configuration.</inlineHelpText>
    <label>Transaction Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>