All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Warranty_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_End_Date__c</fullName>
    <formula>Serial_Number__r.Warranty_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty End Date</label>
    <type>Date</type>
</CustomField>