All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/fields/Work_Order_Created__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a work order was created upon receipt/delivery</description>
    <label>Work Order Created?</label>
    <type>Checkbox</type>
</CustomField>