All_Component_DX/force-app/main/default/objects/RMA_Shipment_Line__c/recordTypes/Shipment.recordType-meta.xml
<RecordType>
    <fullName>Shipment</fullName>
    <active>true</active>
    <label>Shipment</label>
</RecordType>